--- a/aula12ex/ex014/estilo.css
+++ b/aula12ex/ex014/estilo.css
@@ -15,6 +15,12 @@ section{
     box-shadow: 3px 3px 10px rgb(0, 0, 0, 363);
     text-align: center;
 }
+
+div {
+    text-align: center;
+    padding: 5px;
+}
+
 footer{
     color: white;
     text-align: center;
