--- a/aula12ex/ex015/estilo.css
+++ b/aula12ex/ex015/estilo.css
@@ -16,6 +16,15 @@ section{
     text-align: center;
 }
 
+#foto {
+    object-fit: contain;
+    max-height: 100%;
+    max-width: 100%;
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
 div {
     text-align: center;
     padding: 5px;
